--- a/index.html
+++ b/index.html
@@ -1,147 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
 <meta charset="UTF-8">
-<title>Solo Leveling Dashboard</title>
-<style>
-:root {
-  --glow: #7f5cff;
-  --bg-glass: rgba(10,10,25,0.85);
-}
-body {
-  margin:0; font-family:"Segoe UI", Arial, sans-serif;
-  color:#eaeaff;
-  background: url("background.jpg") center/cover fixed no-repeat;
-  overflow-x: hidden;
-}
+<title>Solo Leveling</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
 
-/* LOGIN */
-#login {height:100vh; display:flex; justify-content:center; align-items:center;}
-.login-box {
-  background: var(--bg-glass); padding:30px; border-radius:14px;
-  border:1px solid var(--glow); box-shadow:0 0 25px rgba(127,92,255,0.4); width:300px;
-}
-.login-box h2 {text-align:center; color:var(--glow);}
-input, button {width:100%; padding:10px; margin-top:12px; border-radius:6px; border:none; outline:none;}
-input{background:#111;color:white;}
-button{background:linear-gradient(135deg,#7f5cff,#3b2fff); color:white; font-weight:bold; cursor:pointer;}
+<!-- Firebase -->
+<script type="module">
+import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
+import { getAuth, signInWithEmailAndPassword, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js";
+import { getStorage, ref, uploadBytes, getDownloadURL } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-storage.js";
+import { getFirestore, collection, addDoc, getDocs, query, orderBy } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js";
 
-/* DASHBOARD */
-#content {display:none;}
-
-/* SIDEBAR (HIDDEN INITIALLY) */
-#menu {
-  position:fixed; left:-240px; top:0; width:220px; height:100%;
-  background:var(--bg-glass); padding:20px; transition:left 0.3s ease; z-index:1000;
-}
-#menu h3{color:var(--glow); margin-bottom:15px;}
-.menu-btn{padding:12px; margin-bottom:10px; border:none; background:linear-gradient(135deg,#7f5cff,#3b2fff); color:white; border-radius:8px; cursor:pointer; text-align:left; font-weight:bold; width:100%;}
-
-/* MAIN AREA */
-#main {margin-left:0; transition:0.3s; padding:20px;}
-section {display:none; background:rgba(10,10,25,0.75); padding:20px; border-radius:14px; border:1px solid rgba(127,92,255,0.4); box-shadow:0 0 20px rgba(127,92,255,0.2); margin-bottom:20px;}
-section h2{color:var(--glow); border-left:4px solid var(--glow); padding-left:10px; margin-bottom:15px;}
-
-/* GALLERY GRID */
-#photoGallery, #videoGallery {display:grid; grid-template-columns: repeat(auto-fill,minmax(120px,1fr)); gap:10px;}
-#photoGallery img, #videoGallery video {border-radius:8px; cursor:pointer;}
-
-/* HABITS */
-.habit{display:flex;justify-content:space-between;margin:10px 0;padding:8px 12px;background:rgba(0,0,0,0.4);border-radius:8px;}
-
-/* UPLOAD BUTTONS */
-.upload-btn {margin-top:10px;padding:10px;border:none;border-radius:6px;background:linear-gradient(135deg,#7f5cff,#3b2fff); color:white; cursor:pointer;}
-
-/* MUSIC EQUALIZER */
-.equalizer{position:fixed; bottom:20px; left:20px; width:70px; cursor:pointer; filter:drop-shadow(0 0 10px var(--glow));}
-.bar{transform-origin:bottom;animation:bounce 1.2s infinite ease-in-out; fill:#bfa8ff;}
-.playing .bar{animation-duration:0.6s;}
-@keyframes bounce{0%,100%{transform:scaleY(0.3);}50%{transform:scaleY(1);}}
-
-/* MODAL */
-.modal{display:none; position:fixed; top:0; left:0; width:100%; height:100%; background:rgba(0,0,0,0.9); justify-content:center; align-items:center; z-index:1000;}
-.modal img, .modal video{max-width:90%; max-height:90%; border-radius:10px;}
-
-/* MENU TOGGLE BUTTON */
-#menuToggle {position:fixed;top:14px;left:14px;z-index:1001; background:rgba(127,92,255,0.8); color:white; padding:12px; border-radius:8px; border:none; font-size:22px; cursor:pointer;}
-</style>
-</head>
-<body>
-
-<!-- LOGIN -->
-<div id="login">
-  <div class="login-box">
-    <h2>SOLO LOGIN</h2>
-    <input id="email" placeholder="Email">
-    <input id="password" type="password" placeholder="Password">
-    <button onclick="login()">ENTER</button>
-    <p id="error" style="color:#ff6b6b;"></p>
-  </div>
-</div>
-
-<!-- DASHBOARD -->
-<div id="content">
-  <!-- MENU TOGGLE -->
-  <button id="menuToggle">☰</button>
-
-  <!-- SIDEBAR -->
-  <div id="menu">
-    <h3>MENU</h3>
-    <button class="menu-btn" onclick="showSection('photoSection')">Photos</button>
-    <button class="menu-btn" onclick="showSection('videoSection')">Videos</button>
-    <button class="menu-btn" onclick="showSection('habitSection')">Habits</button>
-    <button class="menu-btn" onclick="toggleMusic()">Music</button>
-  </div>
-
-  <!-- MAIN CONTENT -->
-  <div id="main">
-    <!-- MUSIC -->
-    <audio id="music" loop>
-      <source src="music.mp3" type="audio/mp3">
-    </audio>
-    <svg class="equalizer" id="equalizer" viewBox="0 0 100 100" onclick="toggleMusic()">
-      <rect class="bar" x="10" y="20" width="10" height="60"/>
-      <rect class="bar" x="30" y="20" width="10" height="60"/>
-      <rect class="bar" x="50" y="20" width="10" height="60"/>
-      <rect class="bar" x="70" y="20" width="10" height="60"/>
-      <rect class="bar" x="90" y="20" width="10" height="60"/>
-    </svg>
-
-    <!-- PHOTOS SECTION -->
-    <section id="photoSection">
-      <h2>Photos</h2>
-      <input type="file" id="photoUpload" accept="image/*">
-      <button class="upload-btn" onclick="uploadFile('photo')">Upload Photo</button>
-      <div id="photoGallery"></div>
-      <div id="photoModal" class="modal"><img id="modalPhoto" src=""></div>
-    </section>
-
-    <!-- VIDEOS SECTION -->
-    <section id="videoSection">
-      <h2>Videos</h2>
-      <input type="file" id="videoUpload" accept="video/*">
-      <button class="upload-btn" onclick="uploadFile('video')">Upload Video</button>
-      <div id="videoGallery"></div>
-      <div id="videoModal" class="modal"><video id="modalVideo" controls></video></div>
-    </section>
-
-    <!-- HABITS SECTION -->
-    <section id="habitSection">
-      <h2>Daily Habits</h2>
-      <div class="habit"><span>Workout</span><input type="checkbox" onchange="saveHabit('Workout',this.checked)"></div>
-      <div class="habit"><span>Study</span><input type="checkbox" onchange="saveHabit('Study',this.checked)"></div>
-      <div class="habit"><span>Meditation</span><input type="checkbox" onchange="saveHabit('Meditation',this.checked)"></div>
-    </section>
-  </div>
-</div>
-
-<!-- FIREBASE SDK -->
-<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
-<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-auth-compat.js"></script>
-<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore-compat.js"></script>
-<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-storage-compat.js"></script>
-
-<script>
 const firebaseConfig = {
   apiKey: "AIzaSyCFzIAZ5F5YRQJ3zjOb0U9KJGI6aed_WKI",
   authDomain: "sololeveling-b9f87.firebaseapp.com",
@@ -150,105 +20,108 @@ const firebaseConfig = {
   messagingSenderId: "85355794256",
   appId: "1:85355794256:web:5e0b8e52d81d01cb202655"
 };
-firebase.initializeApp(firebaseConfig);
-const auth = firebase.auth();
-const db = firebase.firestore();
-const storage = firebase.storage();
 
-/* LOGIN */
-function login() {
-  const loginBox = document.getElementById("login");
-  const contentBox = document.getElementById("content");
-  const email = document.getElementById("email").value;
-  const password = document.getElementById("password").value;
+const app = initializeApp(firebaseConfig);
+const auth = getAuth();
+const storage = getStorage();
+const db = getFirestore();
 
-  auth.signInWithEmailAndPassword(email,password)
-    .then(()=>{ loginBox.style.display="none"; contentBox.style.display="block"; showSection('photoSection'); loadGallery(); })
-    .catch(err=>{ document.getElementById("error").innerText = err.message; });
-}
+/* -------- FIXED LOGIN -------- */
+const EMAIL = "solo.levelling8729@gmail.com";
+const PASSWORD = "saikrithi";
 
-/* MUSIC */
-function toggleMusic(){
-  const m = document.getElementById("music");
-  const e = document.getElementById("equalizer");
-  if(m.paused){ m.play(); e.classList.add("playing"); }
-  else{ m.pause(); e.classList.remove("playing"); }
-}
+signInWithEmailAndPassword(auth, EMAIL, PASSWORD)
+.catch(err => alert("Login Failed"));
 
-/* SHOW SECTION */
-function showSection(id){
-  const sections = ['photoSection','videoSection','habitSection'];
-  sections.forEach(s=>document.getElementById(s).style.display="none");
-  document.getElementById(id).style.display="block";
-}
+onAuthStateChanged(auth, user => {
+  if (user) loadPhotos();
+});
 
-/* HABITS */
-function saveHabit(name,value){
-  db.collection("habits").add({
-    habit:name, completed:value,
-    date:new Date().toISOString().split("T")[0],
-    uid:auth.currentUser.uid,
-    createdAt:firebase.firestore.FieldValue.serverTimestamp()
-  });
-}
+/* -------- PHOTO UPLOAD -------- */
+window.uploadPhoto = async () => {
+  const file = document.getElementById("photoInput").files[0];
+  if (!file) return alert("Choose photo");
 
-/* LOAD GALLERY */
-function loadGallery(){
-  const photoGallery = document.getElementById("photoGallery");
-  const videoGallery = document.getElementById("videoGallery");
-  photoGallery.innerHTML = ""; videoGallery.innerHTML = "";
+  const storageRef = ref(storage, "photos/" + Date.now());
+  await uploadBytes(storageRef, file);
+  const url = await getDownloadURL(storageRef);
 
-  db.collection("media").orderBy("createdAt","desc").onSnapshot(snapshot=>{
-    snapshot.forEach(doc=>{
-      const data = doc.data();
-      if(data.type==="photo"){
-        const img = document.createElement("img");
-        img.src = data.url;
-        img.onclick = ()=>{ document.getElementById("photoModal").style.display="flex"; document.getElementById("modalPhoto").src=data.url; };
-        photoGallery.appendChild(img);
-      }
-      if(data.type==="video"){
-        const v = document.createElement("video");
-        v.src = data.url; v.controls=true;
-        v.onclick = ()=>{ 
-          const modal = document.getElementById("videoModal"); 
-          const modalVideo = document.getElementById("modalVideo");
-          modal.style.display="flex"; modalVideo.src=data.url; modalVideo.play();
-        };
-        videoGallery.appendChild(v);
-      }
-    });
+  await addDoc(collection(db, "photos"), {
+    url,
+    created: Date.now()
   });
 
-  document.getElementById("photoModal").onclick = e=>{ if(e.target.id==="photoModal"){ e.target.style.display="none"; } };
-  document.getElementById("videoModal").onclick = e=>{ if(e.target.id==="videoModal"){ const v=document.getElementById("modalVideo"); v.pause(); e.target.style.display="none"; } };
-}
-
-/* UPLOAD FILES */
-function uploadFile(type){
-  const fileInput = type==="photo"? document.getElementById("photoUpload") : document.getElementById("videoUpload");
-  if(fileInput.files.length===0){ alert("Select a file"); return; }
-  const file = fileInput.files[0];
-  const path = `${type}s/${Date.now()}_${file.name}`;
-  const storageRef = storage.ref(path);
-  storageRef.put(file).then(snapshot=>{
-    snapshot.ref.getDownloadURL().then(url=>{
-      db.collection("media").add({ url:url, type:type, createdAt:firebase.firestore.FieldValue.serverTimestamp(), uid:auth.currentUser.uid });
-      alert(type+" uploaded!"); fileInput.value="";
-    });
-  });
-}
-
-/* SIDEBAR TOGGLE */
-const menu = document.getElementById("menu");
-const main = document.getElementById("main");
-const toggleBtn = document.getElementById("menuToggle");
-let sidebarVisible = false;
-toggleBtn.onclick = () => {
-  if(!sidebarVisible){ menu.style.left="0"; main.style.marginLeft="220px"; }
-  else{ menu.style.left="-240px"; main.style.marginLeft="0"; }
-  sidebarVisible = !sidebarVisible;
+  loadPhotos();
 };
+
+/* -------- LOAD GALLERY -------- */
+async function loadPhotos() {
+  const grid = document.getElementById("photoGrid");
+  grid.innerHTML = "";
+
+  const q = query(collection(db, "photos"), orderBy("created","desc"));
+  const snap = await getDocs(q);
+
+  snap.forEach(doc => {
+    const img = document.createElement("img");
+    img.src = doc.data().url;
+    img.onclick = () => openFull(img.src);
+    grid.appendChild(img);
+  });
+}
 </script>
+
+<style>
+body{background:black;color:white;margin:0;font-family:Arial}
+.menu-btn{position:fixed;top:16px;left:16px;width:52px;height:52px;border-radius:50%;background:#222;color:white;font-size:26px;display:flex;align-items:center;justify-content:center;z-index:10}
+.sidebar{position:fixed;left:-260px;top:0;width:260px;height:100%;background:#12001f;padding-top:90px;transition:.3s;z-index:11}
+.sidebar.open{left:0}
+.overlay{position:fixed;inset:0;background:rgba(0,0,0,.4);backdrop-filter:blur(6px);display:none;z-index:10}
+.menu-item{padding:16px;font-size:18px;cursor:pointer;animation:glow 2s infinite alternate}
+@keyframes glow{from{text-shadow:0 0 5px #8a2be2}to{text-shadow:0 0 20px #b84cff}}
+section{display:none;padding:90px 16px}
+.grid{display:grid;grid-template-columns:repeat(auto-fill,minmax(110px,1fr));gap:10px}
+.grid img{width:100%;border-radius:8px;cursor:pointer}
+.full{position:fixed;inset:0;background:black;display:none;align-items:center;justify-content:center;z-index:20}
+.full img{max-width:95%;max-height:95%}
+.close{position:absolute;top:20px;right:20px;font-size:26px}
+.equalizer{position:fixed;bottom:16px;left:16px;display:flex;gap:4px}
+.bar{width:5px;background:#8a2be2;animation:bounce 1s infinite alternate}
+@keyframes bounce{from{height:6px}to{height:26px}}
+</style>
+
+<body>
+
+<div class="menu-btn" onclick="toggle()">☰</div>
+<div class="overlay" onclick="closeSide()"></div>
+
+<div class="sidebar" id="side">
+  <div class="menu-item" onclick="show('photos')">📸 Photos</div>
+</div>
+
+<section id="photos">
+  <input type="file" id="photoInput">
+  <button onclick="uploadPhoto()">Upload Photo</button>
+  <br><br>
+  <div class="grid" id="photoGrid"></div>
+</section>
+
+<div class="full" id="full">
+  <span class="close" onclick="closeFull()">✖</span>
+  <img id="fullImg">
+</div>
+
+<div class="equalizer">
+  <div class="bar"></div><div class="bar"></div><div class="bar"></div><div class="bar"></div>
+</div>
+
+<script>
+function toggle(){side.classList.toggle("open");overlay.style.display="block"}
+function closeSide(){side.classList.remove("open");overlay.style.display="none"}
+function show(id){document.querySelectorAll("section").forEach(s=>s.style.display="none");document.getElementById(id).style.display="block";closeSide()}
+function openFull(src){full.style.display="flex";fullImg.src=src}
+function closeFull(){full.style.display="none"}
+</script>
+
 </body>
 </html>
